# AutoSCP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  example.ini  filemanager.cpp  filemanager.h  fileutils.cpp  main.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  filemanager.cpp  filemanager.h  fileutils.cpp  fileutils.h  filewatcher.cpp  filewatcher.h  filewatcherlinux.cpp  filewatcherlinux.h  filewatcherwindows.cpp  filewatcherwindows.h  scpmanager.cpp  scpmanager.h  sshmanager.cpp  sshmanager.h
